# FPL-RL

./: .gitignore  CLAUDE.md  EP_FORMULA.md  README.md  Research.md  XP_LOOKAHEAD_ANALYSIS.md  pyproject.toml
cluster/: ab_test_xp.slurm  ablation.slurm  download_results.sh  retrain_predictor.slurm  setup.sh  train.slurm  train_hybrid_shifted.slurm  train_hybrid_unshifted.slurm  upload.sh
colab/: prepare_upload.py
data/id_maps/: master_id_map.csv
models/point_predictor/: DEF.lgb  FWD.lgb  GK.lgb  MID.lgb
notebooks/: train_predictor.ipynb  train_rl.ipynb
reports/: season_report_2024-25.md
runs/: analysis_output.txt
scripts/: ab_test_xp.py  analyse_agent.py  analyze_ep.py  audit_deep.py  audit_leakage.py  audit_run.py  backtest_xp_only.py  collect_data.py  collect_odds.py  compare_odds_model.py  compare_shifted.py  debug_eval.py  debug_fbref.py  eval_model.py  evaluate_best_vs_latest.py  evaluate_holdout_ab.py  evaluate_holdout_ab_v2.py  evaluate_rl.py  generate_season_report.py  infer_cop.py  match_xp.py  oracle_comparison.py  plot_ab_metrics.py  plot_training.py  predictor_ablation.py  retrain_and_test.py  scrape_fbref.py  train_predictor_no_xp.py  train_rl.py  train_rl_cluster.py  verify_data_fixes.py  verify_ep_formula.py  xai_predictor_shap.py
src/fpl_rl/: __init__.py
tests/: conftest.py
tests/test_data/: sample_cleaned_players.csv  sample_fixtures.csv  sample_merged_gw.csv  sample_teams.csv  test_collectors_fotmob.py
tests/test_engine/: test_chips.py  test_constraints.py  test_engine.py  test_lineup.py  test_scoring.py  test_transfers.py
webapp/backend/: main.py  (+2 more)
(+101 files in other folders)
