[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fpl-rl"
version = "0.1.0"
description = "Reinforcement learning environment for Fantasy Premier League"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=0.29",
    "numpy>=1.24",
    "pandas>=2.0",
    "requests>=2.31",
]

[project.optional-dependencies]
prediction = [
    "lightgbm>=4.0",
    "scikit-learn>=1.3",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "sb3-contrib>=2.2",
    "stable-baselines3>=2.2",
    "lightgbm>=4.0",
    "scikit-learn>=1.3",
]
data = [
    "aiohttp>=3.9",
    "understatapi>=0.7",
    "soccerdata>=1.8",
    "pyarrow>=14.0",
    "tqdm>=4.66",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
